# DroneAI

./: CLAUDE.md  README.md  log.py  main.py  pyproject.toml  settings.py
.claude/agents/: crewai-drone-pilot.md
ai/: config.py
ai/agents/vision_agent/: crew.py
ai/agents/vision_agent/config/: agents.yaml  tasks.yaml
ai/agents/vision_agent/tools/: custom_tool.py
